# LD50

./: Cargo.toml  web_build.sh
assets/: barrel.glb  boat.glb  boat3.glb  boat_base.glb  boat_base1.glb  floating_island.glb  glitchy_boat.glb  island_with_bridge.glb  rocket.glb  tank_boat.glb  venice_sunset.hdr
copied_dependencies/koi/: Cargo.toml
copied_dependencies/koi/crates/klog/src/: lib.rs
copied_dependencies/koi/web_build/: wasm.wasm
copied_dependencies/parry/src/partitioning/: qbvh.rs
src/: character_controller.rs  explosion_manager.rs  find_flat_parts.rs  main.rs  mouse_look.rs  rapier_integration.rs  rocket.rs  terrain_generator.rs  ui.rs  worm.rs
web_build/: index.html  kwasm.js
