[package]
name = "ld50"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rapier3d = {version = "0.11.1"}
koi = {path = "../koi2", default-features=false, features=["gltf", "jpeg", "png", "graphics", "renderer", "ui", "hdri"]}