[package]
name = "ld50"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rapier3d = {version = "0.11.1"}
noise = {default-features=false, version="0.7.0"}
isosurface = {git = "https://github.com/swiftcoder/isosurface.git", revision="b4b95b3"}
koi = {path = "../koi2", default-features=false, features=["gltf", "jpeg", "png", "graphics", "renderer", "ui", "hdri", "audio"]}
num-format = "0.4.0"