[package]
name = "ld50"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rapier3d = "0.11.1"
isosurface = {git = "https://github.com/swiftcoder/isosurface.git", revision="b4b95b3"}
koi = {path = "copied_dependencies/koi", default-features=false, features=["gltf", "jpeg", "png", "graphics", "renderer", "ui", "hdri", "audio"]}
num-format = "0.4.0"
clatter = {git = "https://github.com/Ralith/clatter", revision="eed9ba3"}

[patch.crates-io]
parry3d = { path = "copied_dependencies/parry/build/parry3d" }